--- a/QRScannerSample/QRScannerSample/Base.lproj/Main.storyboard
+++ b/QRScannerSample/QRScannerSample/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="79y-mq-bOP" customClass="FlashButton" customModule="QRScannerSample" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="79y-mq-bOP" customClass="FlashButton" customModule="QRScannerSample" customModuleProvider="target">
                                 <rect key="frame" x="167" y="742" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="A8o-8g-CqC"/>
@@ -32,16 +32,16 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="79y-mq-bOP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4wQ-vS-z1L"/>
                             <constraint firstAttribute="bottom" secondItem="Lq8-gV-FhD" secondAttribute="bottom" id="7AT-pY-FAX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="79y-mq-bOP" secondAttribute="bottom" constant="40" id="89z-1o-nVt"/>
-                            <constraint firstItem="Lq8-gV-FhD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Gbl-z4-qYV"/>
+                            <constraint firstItem="Lq8-gV-FhD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gbl-z4-qYV"/>
                             <constraint firstItem="Lq8-gV-FhD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="HR4-pr-jLC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lq8-gV-FhD" secondAttribute="trailing" id="SJH-wX-Sqx"/>
+                            <constraint firstAttribute="trailing" secondItem="Lq8-gV-FhD" secondAttribute="trailing" id="SJH-wX-Sqx"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="flashButton" destination="79y-mq-bOP" id="jxg-iE-HM6"/>
